# Hurricane

./: .codecov.yml  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  library.properties  platformio.ini
.github/: CODEOWNERS
.github/workflows/: arduino.yml  build.yaml  codecov.yml  platformio.yml
apps/proxy/: main.c
build_lpc55s69/: CMakeCache.txt  Makefile  cmake_install.cmake
build_lpc55s69/lib/hurricane/: CMakeLists.txt  Makefile  cmake_install.cmake
build_lpc55s69/targets/lpc55s69/: Makefile  cmake_install.cmake
build_lpc55s69/targets/lpc55s69/nxp_sdk_config/: usb_device_config.h  usb_host_config.h  usb_phy_config.h
build_rt1060/: CMakeCache.txt
cmake/: arm-none-eabi-toolchain.cmake  nxp_sdk.cmake
config/: linker.ld
core/: usb_descriptor.c  usb_host_controller.c
core/usb/: usb_control.c  usb_control.h  usb_descriptor.c  usb_descriptor.h  usb_host_controller.c  usb_host_controller.h  usb_hw_common.c  usb_hw_common.h  usb_hw_hal.h
examples/lpc55s69/: CMakeLists.txt
examples/lpc55s69/dual_hid/: BUILD_GUIDE.md  CMakeLists.txt  README.md  device_config.c  device_config.h  host_handler.c  host_handler.h  main.c  usb_interface_manager_demo.c
examples/rt1060/dual_hid/: CMakeLists.txt  README.md  device_config.c  device_config.h  host_handler.c  host_handler.h  main.c  usb_interface_manager_demo.c
examples/teensy41/: demo.ino  teensy41.ino
hw/boards/esp32s3_w5500/: usb_hal.c
hw/boards/template/: usb_hal.c
hw/fpga/src/backend_simple/: top.py
include/hurricane/hw/: usb_hw_hal.h
include/hurricane/usb/: usb_control.h
lib/hurricane/: CMakeLists.txt  hurricane.h
lib/hurricane/core/: device_config.h  hurricane_usb.c  hurricane_usb.h  usb_descriptor.c  usb_descriptor.h  usb_host_config.h  usb_host_config_fix.h  usb_host_controller.c  usb_host_controller.h  usb_interface_manager.c  usb_interface_manager.h
lib/hurricane/hw/: hurricane_hw_hal.h  usb_hw_hal.h
lib/hurricane/hw/boards/dummy/: usb_hw_hal_dummy.c  usb_hw_hal_dummy_fix.c
lib/hurricane/hw/boards/esp32/: CMakeLists.txt  usb_hw_hal_esp32.c
lib/hurricane/hw/boards/esp32-s3-devkitc-1/: usb_hw_hal_esp32.c
lib/hurricane/hw/boards/lpc5500/: board.h  linker.ld  usb_hw_hal_device_lpc55s69.c  usb_hw_hal_host_lpc55s69.c  usb_hw_init_lpc55s69.c
lib/hurricane/hw/boards/max3421e/: max3421e_registers.h  usb_hw_hal_max3421e.c
lib/hurricane/hw/boards/rt1060/: CMakeLists.txt  linker.ld  usb_hw_hal_device_rt1060.c  usb_hw_hal_host_rt1060.c  usb_hw_hal_rt1060.c
lib/hurricane/hw/boards/teensy41/: usb_hw_hal_teensy41.c  usb_hw_hal_teensy41.h
lib/hurricane/hw/boards/template/: usb_hw_hal_template.c
lib/hurricane/usb/: usb_control.c  usb_control.h  usb_hid.c  usb_hid.h
src/: CMakeLists.txt  hurricane_usb.c  hurricane_usb.h  main.c
src.bak/hw/boards/esp32/: usb_hw_hal_esp32.c
src.bak/hw/boards/teensy41/: usb_hw_hal_teensy41.cpp
src/hw/boards/esp32/: usb_hw_hal_esp32.c
src/hw/boards/teensy41/: usb_hw_hal_teensy41.c  usb_hw_hal_teensy41.h
src/hw/boards/template/: usb_hw_hal_template.c
src/usb/: usb_control.c
targets/dummy/: CMakeLists.txt  main.c
targets/esp32/: CMakeLists.txt  main.c  sdkconfig.defaults
targets/lpc55s69/: CMakeLists.txt  main.c
targets/lpc55s69/nxp_sdk_config/: usb_device_config.h
targets/rt1060/: CMakeLists.txt
test/: Makefile  custom_build.sh  debug_env.sh  link_tests.sh  test_runner.c
test/unit/: test_usb_control.c  test_usb_descriptor.c  test_usb_host_controller.c  test_usb_interface_manager.c
tests/: Makefile  test_runner.c  test_usb_control.c
tests/common/: test_common.h
tests/unit/: test_usb_control.c  test_usb_descriptor.c  test_usb_descriptors.c  test_usb_host_controller.c
